--- a/index.html
+++ b/index.html
@@ -10,34 +10,46 @@
     <p>Bem-vindo à MVS Engenharia de Sistemas!</p>
   </header>
 
-  <section id="product">
-    <h2>System Ops Tool</h2>
-    <img src="images/produto1.jpg" alt="Imagem do Produto 1">
-    <img src="images/produto2.jpg" alt="Imagem do Produto 2">
-    <p>Ferramenta que auxilia o time de operações L1/L2 a reduzir o tempo de atuação em ambientes on-premisse e cloud.</p>
-    <a href="#" class="cta-button">Saiba Mais</a>
+  <section>
+    <h2>Quem somos</h2>
+    <p>A MVS Engenharia de Sistemas ajuda empresas que possuem sua operação de Tecnologia internalizada ou terceirizada a reduzir seus custos operacionais e o downtime impactando a gestão de tecnologia e financeira dos clientes.</p>
   </section>
 
-  <section id="team">
-    <h2>Equipe do Projeto</h2>
-    <div class="team-member">
-      <img src="team-member1.jpg" alt="Foto Membro 1">
-      <h3>João Silva</h3>
+  <section id="product-ops">
+    <div class="product-ops-item">
+      <h2>System Ops Tool</h2>
+      <img src="images/produto1.jpg" alt="System Ops Tool">
+      <p>Ferramenta que auxilia o time de operações L1/L2 a reduzir o tempo de atuação em ambientes on-premisse e cloud.</p>
+      <a href="#" class="cta-button">Saiba Mais</a>
+    </div>
+    <div class="product-ops-item">
+      <h2>Web Automation Tool</h2>
+      <img src="images/produto2.jpg" alt="Web Automation Tool">
+      <p>Web automation Tool, é uma ferramenta de automação que é integrada ao System Ops Tool, fornecendo uma interface de API para integrar com ferramentas de monitoração a fim de executar ações corriqueiras do engenheiros para sanar eventos e incidentes nos ambientes de middleware, banco de dados, kubernetes e outros.</p>
+      <a href="#" class="cta-button">Saiba Mais</a>
+    </div>
+  </section>
+
+  <section id="team-mvs">
+    <h2>Equipe de Engenharia</h2>
+    <div class="team-eng">
+      <img src="images/person/pessoa1.jpg" alt="Foto Membro 1">
+      <h3>Marina Silva</h3>
       <p>Cargo: CEO</p>
     </div>
-    <div class="team-member">
-      <img src="team-member2.jpg" alt="Foto Membro 2">
-      <h3>Maria Santos</h3>
-      <p>Cargo: Gerente de Marketing</p>
+    <div class="team-eng">
+      <img src="images/person/pessoa2.jpg" alt="Foto Membro 2">
+      <h3>João Vasconcelos</h3>
+      <p>Cargo: Engenharo de Sistemas</p>
     </div>
-    <div class="team-member">
-      <img src="team-member3.jpg" alt="Foto Membro 3">
-      <h3>Pedro Souza</h3>
-      <p>Cargo: Desenvolvedor</p>
+    <div class="team-eng">
+      <img src="images/person/pessoa3.jpg" alt="Foto Membro 3">
+      <h3>Sonia Souza</h3>
+      <p>Cargo: Gerente de Engenharia</p>
     </div>
   </section>
 
-  <section id="contact">
+  <section id="contact-mvs">
     <h2>Entre em contato</h2>
     <form action="#" method="post">
       <label for="name">Nome:</label>
@@ -57,7 +69,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2023 Minha Empresa. Todos os direitos reservados.</p>
+    <p>&copy; 2023 MVS Engenharia de Sistemas. Todos os direitos reservados.</p>
   </footer>
 
   <script src="script.js"></script>
